--- a/app/views/static_pages/how_it_works.html.erb
+++ b/app/views/static_pages/how_it_works.html.erb
@@ -20,7 +20,7 @@ Here are a few examples:<br>
 &middot; The lowest golf score on hole nine at the Burke Lake golf course.<br>
 <br>
 Once a Feat is created, other users can go to the location where the feat took place to attempt it. Once more than person records a Feat attempt, the competition for top position on the record board begins.</h2> 
-<div class="hr1"></div>
+<br>
 
 <h3><strong>CREATING A FEAT</strong></h3>
 <h2>In order to create a Feat, you must first locate where the Feat took place on our map by searching for it's name and/or address.<br>
@@ -29,8 +29,8 @@ For example, let's say you want to create a Feat for the fastest time to eat a b
 <br>
 Occasionally there will be complications regarding our mapping system. For example, let's say you want to create a FEAT for the fastest person to swim across the Potomac River from the DC to Virginia side, Google Maps will locate another part of the Potomac River.  The best way to address this problem is to create the Feat using the starting location, for example, Jack's Boathouse on the Georgetown Waterfront.<br>
 <br>
-We are constantly working to create a better, more user friendly mapping experience.  If you have any ideas please email us at <a href="#">feedback@featswithfriends.com</a></h2>
-<div class="hr1"></div>
+We are constantly working to create a better, more user friendly mapping experience.  If you have any ideas please email us at <a href="#">feedback@featswithfriends.com</a>.</h2>
+<br>
 
 <h3><strong>NAMING A FEAT AND ADDING A DESCRIPTION AND/OR RULES</strong></h3>
 <h2>After entering the feat location, name the feat and add a description and/or rules. Please be as detailed as possible so other people understand exactly what they have to do when they attempt your feat.<br>
@@ -44,12 +44,12 @@ FEAT DESCRIPTION: The starting line is located on the Brooklyn side of the bridg
 We will be adding the ability to upload photos to the Feat description soon in order to help you better describe the Feat to other people.<br>
 <br>
 Lastly, indicate how the feat is measured, by time (shortest or longest amount of time) or score (lowest or highest score).</h2>
-<div class="hr1"></div>
+<br>
 
 
 <h3><strong>RECORDING A FEAT ATTEMPT</strong></h3>
 <h2>After attempting a Feat, simply submit the result and either upload a picture or YouTube video link of you attempting the feat.</h2>
-<div class="hr1"></div>
+<br>
 
 
 <h3><strong>VALIDATING A FEAT ATTEMPT</strong></h3>
@@ -62,12 +62,12 @@ There are three preferred ways to validate a feat attempt:<br>
 (3) Upload a YouTube video link of you completing the entire feat from start to finish.<br>
 <br>
 Non-validated feat attempts may be recorded, however your friends and other users may be suspicious of your attempt and "rebut" it.</h2>
-<div class="hr1"></div>
+<br>
 
 <h3><strong>REBUTTING A FEAT ATTEMPT</strong></h3>
 <h2>If a person adds a feat attempt without proper validation, other users have the ability to add a "Rebuttal" to the feat.  A rebuttal is a challenge that the result is erroneous based on a lack of proper evidence to support the feat attempt.  It is likely that in the future a feat with several rebuttals will be flagged or displayed at the bottom of the leader board with an asterisk.</h2>
 
-<div class="hr1"></div>
+<br>
 
 <h3><strong>FRIENDLY COMPETITION IS INGRAINED IN EVERYTHING WE DO</strong></h3>
 <h2>Believe it or not, we built Feats With Friends to solve a real problem: having to physically be with other people in order to compete against them.  While this remains the case for several sports and activities that aren't possible with just one person, it doesn't have to be the case for everything else.<br>
