--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,30 +6,40 @@
   box-sizing: border-box;
 }
 
-.statictop-well {
+.profilewhite-well {
   min-height: 0px;
-  padding: 20px 25px 20px 25px;
-  background-color: #fff;
-  border-bottom: 1px solid #E6E6E6;
-  border-top: 1px solid #CCC;
-  border-left: 1px solid #CCC;
-  border-right: 1px solid #CCC;
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-top-left-radius: 4px;
-  border-top-left-radius: 4px;
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-top-right-radius: 4px;
-  border-top-right-radius: 4px;
-  -webkit-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);  	
+  min-width: 0px;
+  padding: 10px 20px 10px 20px;
+  background-color: #FFF;
+	-webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+	-webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.statictop-well h2 {
-  font-size: 30px;
+.profilewhite-well h2 {
+  font-size: 24px;
   line-height: 1;
   color: #333;
-  font-weight: 200;
+  font-weight: 400;
+}
+
+.profilewhite-well h3 {
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 0px;
+  font-weight: 300;
+  color: #333;
+}
+
+.profilewhite-well h4 {
+  font-size: 16px;
+	line-height: 1;
+  letter-spacing: 0px;
+  font-weight: 400;
+  color: #333;
 }
 
 .pull-right {
@@ -53,7 +63,8 @@
 }
 
 
-.usertop-well {
+
+.statictop-well {
   min-height: 0px;
   padding: 15px 25px 15px 25px;
   background-color: #fff;
@@ -72,14 +83,14 @@
   box-shadow: 1px 0px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);  	
 }
 
-.usertop-well h2 {
-  font-size: 20px;
-  line-height: 1.2;
+.statictop-well h2 {
+  font-size: 26px;
+  line-height: 1;
   color: #333;
   font-weight: 200;
 }
 
-.usertop-well h3 {
+.statictop-well h3 {
   font-size: 14px;
   line-height: 1.2;
   color: #333;
@@ -128,17 +139,9 @@
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px 0px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.staticbottom-well h1 {
-  font-size: 12px;
-	line-height: 1.9;
-  letter-spacing: 0px;
-  font-weight: 300;
-  color: #333;
-}
-
 .staticbottom-well h2 {
   font-size: 14px;
-  line-height: 1.3;
+	line-height: 1.3;
   letter-spacing: 0px;
   font-weight: 300;
   color: #333;
@@ -184,34 +187,6 @@
   letter-spacing: 0px;
   font-weight: 200;
   color: #333;
-}
-
-.pull-right {
-  float: right;
-}
-
-.pull-left {
-  float: left;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
-
-.grey-well {
-  min-height:10px;
-  min-width: 10px;
-  padding: 25px 25px 25px 25px;
-  background-color: #F6F6F6;
 }
 
 .pull-right {
@@ -373,11 +348,11 @@
 
 
 .map-well {
-  min-height: 20px;
-  min-width: 20px;
+  min-height: 0px;
+  min-width: 0px;
+	margin-bottom: 12px;
   padding: 3px 3px 3px 3px;
   background-color: #FFF;
-	margin-bottom: 30px;
   border: 1px solid #CCC;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -439,6 +414,8 @@
   padding: 5px, 20px, 5px, 20px;
   background-color: rgba(51,51,51,1);
   background-image: none;
+	border-top: 1px solid #000; 
+	border-bottom: 1px solid #000; 
 }
 
 .navbar .brand {
