--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row-fluid">
 	    <div class="span12">
-        <div class="usertop-well">
+        <div class="profilewhite-well">
 				  <h2><%= image_tag@user.image %> &nbsp;
 						<strong><%= @user.name %></strong>, <%= @user.username %></h2>
 		      <h3>
