--- a/app/views/feats/show.html.erb
+++ b/app/views/feats/show.html.erb
@@ -43,7 +43,7 @@
 	 													edit_attempt_path(a.id), title: 'Edit Attempt' %> |
 	                 			  <%= link_to '<i class="icon-remove"></i>'.html_safe,
 	 													attempt_path(a.id), 
-														confirm: 'Delete this attempt?', method: 'delete',
+														confirm: 'Are you sure you want to delete this attempt?', method: 'delete',
 														title: 'Delete Attempt' %>
 	                 		  <% end %>
 										  </h2>
