--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -2,16 +2,13 @@
 <div class="background-unit">
   <div class="container">
 	  <div class="row-fluid">
-      <div class="span12">
-		  	<%= link_to(( image_tag @user.image ), @user ) %>
-		  	<%= link_to "#{@user.username}", @user %> has attempted the following
-		 			feats:
-	    </div>
-	  </div>
-	  <br>
-	  <div class="row-fluid">
       <div class="span5">
-		  	<div class="craig-unit">
+			  <div class="craig-unit">
+				  <h2>
+		  	    <%= link_to(( image_tag @user.image ), @user ) %>
+		  	    <%= link_to "#{@user.username}", @user %> has attempted the following feats:
+					</h2>
+					<hr>
 					<% unless @attempts.empty? %>
 						<% @attempts.each do |a| %>
 							<h2>
