Root page is search page

--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -31,10 +31,8 @@
 					<% end %>
 	      </div>
 			</div>
-	    <div class="span7">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-        </div>
+	    <div class="span7 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
 	  </div>
   </div>
