--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -16,10 +16,8 @@
     			<%= render 'attempt_form' %>
   			</div>
 			</div>				
-   		<div class="span8">
-     		<div class="map-well"> 
-       		<div id="map_canvas"></div>
-        </div>
+   		<div class="span8 map-well">
+       	<div id="map_canvas"></div>
    		</div>
  		</div>
   </div>
