--- a/app/views/locations/choose_from_existing.html.erb
+++ b/app/views/locations/choose_from_existing.html.erb
@@ -14,10 +14,8 @@
 					<h2><%= link_to 'Create New Location', new_location_path %></h2>
 		  	</div>
 	    </div>
-      <div class="span8">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-        </div>
+      <div class="span8 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
 	  </div>
   </div>
