--- a/app/views/locations/locate.html.erb
+++ b/app/views/locations/locate.html.erb
@@ -23,10 +23,8 @@
 					<% end %>
 		  	</div>
 			</div>		
-			<div class="span8">
-	      <div class="map-well">  
-		    	<div id="map_canvas"></div>
-	      </div>
+			<div class="span8 map-well">
+		   	<div id="map_canvas"></div>
       </div>
     </div>
 	</div>
