--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -22,10 +22,8 @@
 					<% end %>
 		  	</div>
 			</div>
-	    <div class="span7">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-        </div>
+	    <div class="span7 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
 	  </div>
   </div>
