--- a/app/views/feats/index.html.erb
+++ b/app/views/feats/index.html.erb
@@ -29,10 +29,8 @@
 					<% end %>
 		  	</div>
 	    </div>
-      <div class="span7">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-        </div>
+      <div class="span7 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
 	  </div>
   </div>
