--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -20,10 +20,8 @@
           <% end %>
 	      </div>
 		  </div>
-      <div class="span8">
-	      <div class="map-well"> 
-	        <div id="map_canvas"></div>
-        </div>
+      <div class="span8 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
 	  </div>
   </div>
