--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -31,10 +31,8 @@
 				  </h3>
 		    </div>
 		  </div>
-	    <div class="span5">
-		    <div class="map-well">
-	        <div id="map_canvas"></div>
-	      </div>
+	    <div class="span5 map-well">
+	      <div id="map_canvas"></div>
 	    </div>
     </div>
   </div>
