--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -211,6 +211,51 @@
   visibility: hidden;
 }
 
+.background2-unit {
+  min-height: 30px;
+  padding: 35px 10px 60px 10px;
+	margin-left: -20px;
+	margin-right: -20px;
+  background-image: url(background.jpg);
+  background-repeat: repeat;
+}
+.background2-unit h1 {
+  font-size: 30px;
+	line-height: 1;
+  letter-spacing: 0px;
+  font-weight: 200;
+  color: #333;
+}
+
+.map-unit {
+  min-height: 330px;
+  padding: 40px 0px 25px 0px;
+  margin-top: 0px;
+  margin-left: -20px;
+  margin-right: -20px;
+  background-image: url(map.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover; 
+	 -moz-box-shadow: inset 0 12px 12px -12px #000, inset 0 -8px 8px -8px #333;
+  -webkit-box-shadow: inset 0 12px 12px -12px #000, inset 0 -8px 8px -8px #333;
+  box-shadow: inset 0 12px 12px -12px #000, inset 0 -8px 8px -8px #333;
+}
+
+.map-well {
+  min-height: 282px;
+	max-height: 282px;
+	min-width: 500px;
+	max-width: 500px;
+  padding: 8px 8px 0px 8px;
+	margin-bottom: 0px;
+  background: #FFF;
+  border: 1px solid #D3D3D3;
+  -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.07), -2px -2px 2px 2px rgba(0, 0, 0, 0.07);
+  -moz-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.07), -2px -2px 2px 2px rgba(0, 0, 0, 0.07);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.07), -2px -2px 2px 2px rgba(0, 0, 0, 0.07);
+}
 
 .footer-unit {
   min-height: 25px;
@@ -327,7 +372,7 @@
 
 .home-well {
   min-height: 20px;
-  max-width: 480px;
+	max-width: 925px;
   padding: 18px 10px 10px 10px;
   background-color: #333;
 	border: 1px solid #ffffff;
@@ -341,8 +386,8 @@
 }
 
 .home-well h1 {
-  font-size: 24px;
-  line-height: 1.2;
+  font-size: 30px;
+  line-height: 1.3;
   font-weight:100;
   color: #FFF;
   letter-spacing: 1px;
@@ -437,6 +482,7 @@
   color: #CCC;
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color: transparent;
 }
 
 .navbar .nav > li > a:hover {
@@ -448,11 +494,13 @@
 a {
   color: #0066FF;
   text-decoration: none;
+	background-color: transparent;
 }
 
 a:hover {
   color: #0066ff;
   text-decoration: underline;
+	background-color: transparent;
 }
 
 alert {
@@ -567,6 +615,7 @@ alert {
 .break-word {
   word-wrap: break-word;
 }
+
 
 
 
